--- a/templates/standard/edge.yaml
+++ b/templates/standard/edge.yaml
@@ -62,6 +62,8 @@ parameters:
     description: "Warning: Specific configuration that will be passed to bash scripts as associative array"
     type: string
     default: ''
+  package_config:
+    type: string
 
 resources:
   sec_group:
@@ -104,9 +106,21 @@ resources:
             $roles$: 'cloudera_edge,console_frontend,console_backend_data_logger,console_backend_data_manager,graphite,gobblin,deployment_manager,package_repository,data_service,impala-shell,yarn-gateway,hbase_opentsdb_tables,hdfs_cleaner,master_dataset'
             $cloudera_role$: 'EDGE'
             $$SPECIFIC_CONF$$: { get_param: specific_config }
+
+  deploy_package:
+    type: OS::Heat::SoftwareDeployment
+    properties:
+      signal_transport: { get_param: signal_transport }
+      config:
+        get_param: package_config
+      server:
+        get_resource: server
+      actions:
+        - CREATE
+
   install_deployment:
     type: OS::Heat::SoftwareDeployment
-    depends_on: [ logvolume_attachment ,  prvolume_attachment]
+    depends_on: [ logvolume_attachment ,  prvolume_attachment, deploy_package]
     properties:
       signal_transport: { get_param: signal_transport }
       config:
