--- a/templates/standard/opentsdb.yaml
+++ b/templates/standard/opentsdb.yaml
@@ -53,6 +53,8 @@ parameters:
     description: "Warning: Specific configuration that will be passed to bash scripts as associative array"
     type: string
     default: ''
+  package_config:
+    type: string
 
 resources:
   port:
@@ -77,7 +79,18 @@ resources:
             $index$: { get_param: NodeIndex }
             $roles$: 'opentsdb,grafana'
             $$SPECIFIC_CONF$$: { get_param: specific_config }
+  deploy_package:
+    type: OS::Heat::SoftwareDeployment
+    properties:
+      signal_transport: { get_param: signal_transport }
+      config:
+        get_param: package_config
+      server:
+        get_resource: server
+      actions:
+        - CREATE
   install_deployment:
+    depends_on: [deploy_package]
     type: OS::Heat::SoftwareDeployment
     properties:
       signal_transport: { get_param: signal_transport }
