--- a/templates/standard/tools.yaml
+++ b/templates/standard/tools.yaml
@@ -50,6 +50,8 @@ parameters:
     description: "Warning: Specific configuration that will be passed to bash scripts as associative array"
     type: string
     default: ''
+  package_config:
+    type: string
 
 resources:
   port:
@@ -73,7 +75,19 @@ resources:
             $pnda_cluster$: { get_param: cluster_name }
             $roles$: 'kafka_manager,platform_testing_general,elk'
             $$SPECIFIC_CONF$$: { get_param: specific_config }
+  deploy_package:
+    type: OS::Heat::SoftwareDeployment
+    properties:
+      signal_transport: { get_param: signal_transport }
+      config:
+        get_param: package_config
+      server:
+        get_resource: server
+      actions:
+        - CREATE
+
   install_deployment:
+    depends_on: [ deploy_package ]
     type: OS::Heat::SoftwareDeployment
     properties:
       signal_transport: { get_param: signal_transport }
