--- a/templates/bmstandard/resource_registry.yaml
+++ b/templates/bmstandard/resource_registry.yaml
@@ -8,3 +8,4 @@ resource_registry:
   OS::Pnda::cm: cm.yaml
   OS::Pnda::manager1: mgr1.yaml
   OS::Pnda::manager2: mgr2.yaml
+  OS::Pnda::preConfig : OS::Heat::None
