--- a/templates/standard/jupyter.yaml
+++ b/templates/standard/jupyter.yaml
@@ -45,6 +45,8 @@ parameters:
     description: "Warning: Specific configuration that will be passed to bash scripts as associative array"
     type: string
     default: ''
+  package_config:
+    type: string
 
 resources:
   sec_group:
@@ -82,8 +84,20 @@ resources:
             $roles$: 'jupyter'
             $cloudera_role$: 'EDGE'
             $$SPECIFIC_CONF$$: { get_param: specific_config }
+  deploy_package:
+    type: OS::Heat::SoftwareDeployment
+    properties:
+      signal_transport: { get_param: signal_transport }
+      config:
+        get_param: package_config
+      server:
+        get_resource: server
+      actions:
+        - CREATE
+
   install_deployment:
     type: OS::Heat::SoftwareDeployment
+    depends_on: [ deploy_package ]
     properties:
       signal_transport: { get_param: signal_transport }
       config:
