--- a/templates/standard/cm.yaml
+++ b/templates/standard/cm.yaml
@@ -1,4 +1,4 @@
-# Definition for the cloudera manager instance type
+# Definition for the hadoop manager instance type
 # Specifies which bootstrap script to run to set up this instance type and which roles
 # to apply to this instance type
 
@@ -6,7 +6,7 @@ heat_template_version: 2015-04-30
 
 parameters:
   Flavor:
-    description: Flavor of the cloudera manager server
+    description: Flavor of the hadoop manager server
     type: string
     default: ec2.m3.xlarge
   KeyName:
@@ -59,7 +59,7 @@ resources:
       name:
         str_replace:
           template:
-            cname-cdh-cm
+            cname-hadoop-cm
           params:
             cname: { get_param: cluster_name }
       rules:
@@ -89,8 +89,8 @@ resources:
             $master_ip$: { get_param: SaltmasterIP }
             $pnda_cluster$: { get_param: cluster_name }
             $log_volume_id$: { get_resource: logvolume }
-            $roles$: 'cloudera_manager,platform_testing_cdh,mysql_connector,pnda_restart'
-            $cloudera_role$: 'CM'
+            $roles$: 'hadoop_manager,platform_testing_cdh,mysql_connector,pnda_restart'
+            $hadoop_role$: 'CM'
             $$SPECIFIC_CONF$$: { get_param: specific_config }
   deploy_package:
     type: OS::Heat::SoftwareDeployment
@@ -117,7 +117,7 @@ resources:
     type: OS::Cinder::Volume
     properties:
       size: { get_param: logvolume_size }
-      description: Volume for cloudera manager logs
+      description: Volume for hadoop manager logs
 
   logvolume_attachment:
     type: OS::Cinder::VolumeAttachment
