--- a/templates/standard/mgr4.yaml
+++ b/templates/standard/mgr4.yaml
@@ -61,7 +61,7 @@ resources:
       name:
         str_replace:
           template:
-            cname-cdh-mgr4
+            cname-hadoop-mgr4
           params:
             cname: { get_param: cluster_name }
       rules:
@@ -89,7 +89,7 @@ resources:
             $pnda_cluster$: { get_param: cluster_name }
             $log_volume_id$: { get_resource: logvolume }
             $roles$: 'oozie_database,mysql_connector,hue'
-            $cloudera_role$: 'MGR04'
+            $hadoop_role$: 'MGR04'
             $$SPECIFIC_CONF$$: { get_param: specific_config }
   deploy_package:
     type: OS::Heat::SoftwareDeployment
