--- a/templates/standard/mgr1.yaml
+++ b/templates/standard/mgr1.yaml
@@ -61,7 +61,7 @@ resources:
       name:
         str_replace:
           template:
-            cname-cdh-mgr1
+            cname-hadoop-mgr1
           params:
             cname: { get_param: cluster_name }
       rules:
@@ -87,8 +87,8 @@ resources:
             $pnda_cluster$: { get_param: cluster_name }
             $flavor$: { get_param: pnda_flavor }
             $log_volume_id$: { get_resource: logvolume }
-            $roles$: 'cloudera_namenode,mysql_connector'
-            $cloudera_role$: 'MGR01'
+            $roles$: 'mysql_connector'
+            $hadoop_role$: 'MGR01'
             $$SPECIFIC_CONF$$: { get_param: specific_config }
   deploy_package:
     type: OS::Heat::SoftwareDeployment
