--- a/templates/standard/jupyter.yaml
+++ b/templates/standard/jupyter.yaml
@@ -47,6 +47,8 @@ parameters:
     default: ''
   package_config:
     type: string
+  hadoop_distro:
+    type: string
 
 resources:
   sec_group:
@@ -84,6 +86,7 @@ resources:
             $roles$: 'jupyter'
             $hadoop_role$: 'EDGE'
             $$SPECIFIC_CONF$$: { get_param: specific_config }
+            $hadoop_distro$: { get_param: hadoop_distro }
   deploy_package:
     type: OS::Heat::SoftwareDeployment
     properties:
