--- a/templates/standard/logserver.yaml
+++ b/templates/standard/logserver.yaml
@@ -50,6 +50,8 @@ parameters:
     default: ''
   package_config:
     type: string
+  hadoop_distro:
+    type: string
 
 resources:
   sec_group:
@@ -91,6 +93,7 @@ resources:
             $log_volume_id$: { get_resource: logvolume }
             $roles$: 'elk,logserver,kibana_dashboard'
             $$SPECIFIC_CONF$$: { get_param: specific_config }
+            $hadoop_distro$: { get_param: hadoop_distro }
   deploy_package:
     type: OS::Heat::SoftwareDeployment
     properties:
