--- a/templates/standard/mgr3.yaml
+++ b/templates/standard/mgr3.yaml
@@ -50,6 +50,8 @@ parameters:
     default: ''
   package_config:
     type: string
+  hadoop_distro:
+    type: string
 
 resources:
   sec_group:
@@ -89,6 +91,7 @@ resources:
             $roles$: 'mysql_connector'
             $hadoop_role$: 'MGR03'
             $$SPECIFIC_CONF$$: { get_param: specific_config }
+            $hadoop_distro$: { get_param: hadoop_distro }
   deploy_package:
     type: OS::Heat::SoftwareDeployment
     properties:
