--- a/templates/standard/mgr4.yaml
+++ b/templates/standard/mgr4.yaml
@@ -52,6 +52,8 @@ parameters:
     default: ''
   package_config:
     type: string
+  hadoop_distro:
+    type: string
 
 resources:
   sec_group:
@@ -91,6 +93,7 @@ resources:
             $roles$: 'oozie_database,mysql_connector,hue'
             $hadoop_role$: 'MGR04'
             $$SPECIFIC_CONF$$: { get_param: specific_config }
+            $hadoop_distro$: { get_param: hadoop_distro }
   deploy_package:
     type: OS::Heat::SoftwareDeployment
     properties:
