--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,7 @@
 deploy
+pr_key
 .project
-cli/test.py
-
-heat_operations.md
-
-pnda_env-git.yaml
-
-alternate_envs/huge.yaml
-
-alternate_envs/pnda_env_b1.yaml
-
-alternate_envs/pnda_env_b2.yaml
-
-alternate_envs/pnda_env_b3.yaml
-
-alternate_envs/pnda_env_b4.yaml
-
-alternate_envs/pnda_env_xxlarge.yaml
-
-pnda_env_default.yaml
-
+alternate_envs/
+_resources_*
 pnda_env.yaml
 
-pnda_env_standard.yaml
-
-os_scripts/ccast_create_flavors.sh
-
-pnda_env_cpod.yaml
